# flowguide

./: .gitignore  Cargo.toml  README.md  dev_serve.sh  flake.nix
src/: hierarchy.rs  lib.rs  mesh.rs  ofield.wgsl  orientation.rs  ply.rs  preview.wgsl  renderer.rs  stream.rs
web/: index.html
