[package]
name = "flowguide"
version = "0.1.0"
authors = ["Maxwell Beck <max@rastertail.net>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6" }
wee_alloc = { version = "0.4.5" }

[profile.release]
opt-level = "s"
